--- a/common.env
+++ b/common.env
@@ -1,7 +1,15 @@
+ALLOWED_HOSTS=new.tpksnab.ru,tpksnab.ru,45.86.180.71
+#DEBUG=False
+#DATABASE_URL=postgres://saleor:saleoar@new.tpksnab.ru/saleor
+SECRET_KEY=l26-f*jkc_u7&!l&_isr76bxl**h8!r7ixl^+%*(7^zfo9h%jr
+DEFAULT_CURRENCY=RUB
+#APP_MOUNT_URI=/dashboard/
+ALLOWED_CLIENT_HOSTS=*
 DATABASE_URL=postgres://saleor:saleor@db/saleor
 DEFAULT_FROM_EMAIL=noreply@example.com
 OPENEXCHANGERATES_API_KEY
 CELERY_BROKER_URL=redis://redis:6379/1
-SECRET_KEY=changeme
 JWT_VERIFY_EXPIRATION=True
 VATLAYER_ACCESS_KEY
+DEFAULT_COUNTRY="RU"
+API_URI=new.tpksnab.ru:8000
